# ds-view

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format-check.yml  workflow.yml
cmake/: dependencies.cmake  functions.cmake
include/dsview/: dslib.hpp
include/dsview/dslib/: device.hpp  ds1000.hpp  model.hpp  scpi.hpp
include/dsview/dslib/detail/: common.hpp
include/dsview/dslib/scpi/: command.hpp
include/dsview/dslib/scpi/commands/: all.hpp  common.hpp  ds1000.hpp
include/dsview/dslib/scpi/commands/ds1000/: display.hpp  global.hpp
lib/: device.cc
src/: main.cc
test/: CMakeLists.txt
test/src/: idn.cc
